--- a/customers.html
+++ b/customers.html
@@ -236,46 +236,46 @@
                                                         <img class="lozad" data-src="assets/img/4.png" alt="My Auris">
                                                         Thẩm mỹ
                                                     </li>
-                                                    <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Dòng sứ phổ thông</a></li>
-                                                    <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Dòng sứ cao cấp</a></li>
-                                                    <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Phủ răng sứ</a></li>
-                                                    <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Dán sứ - Phủ màn sứ</a></li>
+                                                    <li><a href="./service-detail.html"><i class="fas fa-arrow-circle-right"></i>Dòng sứ phổ thông</a></li>
+                                                    <li><a href="./service-detail.html"><i class="fas fa-arrow-circle-right"></i>Dòng sứ cao cấp</a></li>
+                                                    <li><a href="./service-detail.html"><i class="fas fa-arrow-circle-right"></i>Phủ răng sứ</a></li>
+                                                    <li><a href="./service-detail.html"><i class="fas fa-arrow-circle-right"></i>Dán sứ - Phủ màn sứ</a></li>
                                                 </ul>
                                                 <ul class="col-lg-3 col-md-12 col-xs-12 link-list">
                                                     <li class="title">
                                                         <img class="lozad" data-src="assets/img/3.png" alt="My Auris">
                                                         Điều trị
                                                     </li>
-                                                    <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Cạo vôi răng</a></li>
-                                                    <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Trám răng</a></li>
-                                                    <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Điều trị tủy</a></li>
-                                                    <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Nhổ răng</a></li>
+                                                    <li><a href="./service-detail.html"><i class="fas fa-arrow-circle-right"></i>Cạo vôi răng</a></li>
+                                                    <li><a href="./service-detail.html"><i class="fas fa-arrow-circle-right"></i>Trám răng</a></li>
+                                                    <li><a href="./service-detail.html"><i class="fas fa-arrow-circle-right"></i>Điều trị tủy</a></li>
+                                                    <li><a href="./service-detail.html"><i class="fas fa-arrow-circle-right"></i>Nhổ răng</a></li>
                                                 </ul>
                                                 <ul class="col-lg-3 col-md-12 col-xs-12 link-list">
                                                     <li class="title">
                                                         <img class="lozad" data-src="assets/img/2.png" alt="My Auris">
                                                         Cải thiện
                                                     </li>
-                                                    <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Niềng răng mắc cài</a></li>
-                                                    <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Niềng răng vô hình Invisalign</a></li>
-                                                    <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Niềng răng vô hình iMay</a></li>
-                                                    <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Nhấn lợi giảm hô</a></li>
-                                                    <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Nhấn lợi tạo đường cười</a></li>
+                                                    <li><a href="./service-detail.html"><i class="fas fa-arrow-circle-right"></i>Niềng răng mắc cài</a></li>
+                                                    <li><a href="./service-detail.html"><i class="fas fa-arrow-circle-right"></i>Niềng răng vô hình Invisalign</a></li>
+                                                    <li><a href="./service-detail.html"><i class="fas fa-arrow-circle-right"></i>Niềng răng vô hình iMay</a></li>
+                                                    <li><a href="./service-detail.html"><i class="fas fa-arrow-circle-right"></i>Nhấn lợi giảm hô</a></li>
+                                                    <li><a href="./service-detail.html"><i class="fas fa-arrow-circle-right"></i>Nhấn lợi tạo đường cười</a></li>
                                                 </ul>
                                                 <ul class="col-lg-3 col-md-12 col-xs-12 link-list">
                                                     <li class="title">
                                                         <img class="lozad" data-src="assets/img/1.png" alt="My Auris">
                                                         Phục hồi
                                                     </li>
-                                                    <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Cầu răng sứ</a></li>
-                                                    <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Trồng răng Implant</a></li>
+                                                    <li><a href="./service-detail.html"><i class="fas fa-arrow-circle-right"></i>Cầu răng sứ</a></li>
+                                                    <li><a href="./service-detail.html"><i class="fas fa-arrow-circle-right"></i>Trồng răng Implant</a></li>
                                                 </ul>
                                             </div>
                                         </div>
                                     </div>
                                 </li>
                                 <li class="has-children active">
-                                    <a href="#">Khách hàng <i class="fas fa-caret-down"></i></a>
+                                    <a href="./customers.html">Khách hàng <i class="fas fa-caret-down"></i></a>
                                     <ul class="sub-menu">
                                         <li><a href="./kols.html"><i class="fas fa-angle-right"></i>Người nổi tiếng</a></li>
                                         <li><a href="./customers.html"><i class="fas fa-angle-right"></i>Khách hàng</a></li>
@@ -288,21 +288,21 @@
                                             <div class="row">
                                                 <ul class="col-lg-6 col-md-12 col-xs-12 link-list">
                                                     <li class="title">Công nghệ</li>
-                                                    <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Làm răng sứ</a></li>
-                                                    <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Bọc răng sứ</a></li>
-                                                    <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Phủ răng sứ</a></li>
-                                                    <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Dán răng sứ</a></li>
-                                                    <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Niềng răng</a></li>
+                                                    <li><a href="./knowledge-detail.html"><i class="fas fa-arrow-circle-right"></i>Làm răng sứ</a></li>
+                                                    <li><a href="./knowledge-detail.html"><i class="fas fa-arrow-circle-right"></i>Bọc răng sứ</a></li>
+                                                    <li><a href="./knowledge-detail.html"><i class="fas fa-arrow-circle-right"></i>Phủ răng sứ</a></li>
+                                                    <li><a href="./knowledge-detail.html"><i class="fas fa-arrow-circle-right"></i>Dán răng sứ</a></li>
+                                                    <li><a href="./knowledge-detail.html"><i class="fas fa-arrow-circle-right"></i>Niềng răng</a></li>
                                                 </ul>
                                                 <ul class="col-lg-6 col-md-12 col-xs-12 link-list">
                                                     <li class="title">Bệnh lý</li>
-                                                    <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Răng hô</a></li>
-                                                    <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Răng móm</a></li>
-                                                    <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Răng thưa</a></li>
-                                                    <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Răng răng vàng ố</a></li>
-                                                    <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Răng khấp khểnh</a></li>
-                                                    <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Mất răng</a></li>
-                                                    <li><a href="#"><i class="fas fa-arrow-circle-right"></i>Viêm nướu (lợi)</a></li>
+                                                    <li><a href="./knowledge-detail.html"><i class="fas fa-arrow-circle-right"></i>Răng hô</a></li>
+                                                    <li><a href="./knowledge-detail.html"><i class="fas fa-arrow-circle-right"></i>Răng móm</a></li>
+                                                    <li><a href="./knowledge-detail.html"><i class="fas fa-arrow-circle-right"></i>Răng thưa</a></li>
+                                                    <li><a href="./knowledge-detail.html"><i class="fas fa-arrow-circle-right"></i>Răng răng vàng ố</a></li>
+                                                    <li><a href="./knowledge-detail.html"><i class="fas fa-arrow-circle-right"></i>Răng khấp khểnh</a></li>
+                                                    <li><a href="./knowledge-detail.html"><i class="fas fa-arrow-circle-right"></i>Mất răng</a></li>
+                                                    <li><a href="./knowledge-detail.html"><i class="fas fa-arrow-circle-right"></i>Viêm nướu (lợi)</a></li>
                                                 </ul>
                                             </div>
                                         </div>
@@ -323,28 +323,75 @@
                                     <li class="active"><a href="/">Trang chủ</a></li>
                                     <li><a href="./about.html">Giới thiệu</a></li>
                                     <li class="has-children">
-                                        <a href="#">Dịch vụ</a>
+                                        <a href="./services.html">Dịch vụ</a>
                                         <ul class="sub-menu">
-                                            <li><a href="#">Danh mục</a></li>
-                                            <li><a href="#">Chi tiết</a></li>
+                                            <li><a href="#">Thẩm mỹ</a>
+                                                <ul class="sub-menu">
+                                                    <li><a href="./service-detail.html">Dòng sứ phổ thông</a></li>
+                                                    <li><a href="./service-detail.html">Dòng sứ cao cấp</a></li>
+                                                    <li><a href="./service-detail.html">Phủ răng sứ</a></li>
+                                                    <li><a href="./service-detail.html">Dán sứ - Phủ màn sứ</a></li>
+                                                </ul>
+                                            </li>
+                                            <li><a href="#">Điều trị</a>
+                                                <ul class="sub-menu">
+                                                    <li><a href="./service-detail.html">Cạo vôi răng</a></li>
+                                                    <li><a href="./service-detail.html">Trám răng</a></li>
+                                                    <li><a href="./service-detail.html">Điều trị tủy</a></li>
+                                                    <li><a href="./service-detail.html">Nhổ răng</a></li>
+                                                </ul>
+                                            </li>
+                                            <li><a href="#">Cải thiện</a>
+                                                <ul class="sub-menu">
+                                                    <li><a href="./service-detail.html">Niềng răng mắc cài</a></li>
+                                                    <li><a href="./service-detail.html">Niềng răng vô hình Invisalign</a></li>
+                                                    <li><a href="./service-detail.html">Niềng răng vô hình iMay</a></li>
+                                                    <li><a href="./service-detail.html">Nhấn lợi giảm hô</a></li>
+                                                    <li><a href="./service-detail.html">Nhấn lợi tạo đường cười</a></li>
+                                                </ul>
+                                            </li>
+                                            <li><a href="#">Phục hồi</a>
+                                                <ul class="sub-menu">
+                                                    <li><a href="./service-detail.html">Cầu răng sứ</a></li>
+                                                    <li><a href="./service-detail.html">Trồng răng Implant</a></li>
+                                                </ul>
+                                            </li>
                                         </ul>
                                     </li>
                                     <li class="has-children">
-                                        <a href="#">Khách hàng</a>
+                                        <a href="./customers.html">Khách hàng</a>
                                         <ul class="sub-menu">
-                                            <li><a href="#">Người nổi tiếng</a></li>
-                                            <li><a href="#">Khách hàng</a></li>
+                                            <li><a href="./kols.html">Người nổi tiếng</a></li>
+                                            <li><a href="./customers.html">Khách hàng</a></li>
                                         </ul>
                                     </li>
                                     <li class="has-children">
-                                        <a href="#">Kiến thức</a>
+                                        <a href="./knowledge.html">Kiến thức</a>
                                         <ul class="sub-menu">
-                                            <li><a href="#">Danh mục</a></li>
-                                            <li><a href="#">Chi tiết</a></li>
+                                            <li><a href="#">Công nghệ</a>
+                                                <ul class="sub-menu">
+                                                    <li><a href="./knowledge-detail.html">Làm răng sứ</a></li>
+                                                    <li><a href="./knowledge-detail.html">Bọc răng sứ</a></li>
+                                                    <li><a href="./knowledge-detail.html">Phủ răng sứ</a></li>
+                                                    <li><a href="./knowledge-detail.html">Dán răng sứ</a></li>
+                                                    <li><a href="./knowledge-detail.html">Niềng răng</a></li>
+                                                </ul>
+                                            </li>
+                                            <li><a href="#">Bệnh lý</a>
+                                                <ul class="sub-menu">
+                                                    <li><a href="./knowledge-detail.html">Răng hô</a></li>
+                                                    <li><a href="./knowledge-detail.html">Răng móm</a></li>
+                                                    <li><a href="./knowledge-detail.html">Răng thưa</a></li>
+                                                    <li><a href="./knowledge-detail.html">Răng răng vàng ố</a></li>
+                                                    <li><a href="./knowledge-detail.html">Răng khấp khểnh</a></li>
+                                                    <li><a href="./knowledge-detail.html">Mất răng</a></li>
+                                                    <li><a href="./knowledge-detail.html">Viêm nướu (lợi)</a></li>
+                                                </ul>
+                                            </li>
                                         </ul>
                                     </li>
-                                    <li><a href="#">Tin tức</a></li>
-                                    <li><a href="#">Liên hệ</a></li>
+                                    <li><a href="./news.html">Tin tức</a></li>
+                                    <li><a href="./contact.html">Liên hệ</a></li>
                                 </ul>
                             </nav>
                         </div>
@@ -403,17 +450,17 @@
             <div class="thumbnail">
                 <div class="container">
                     <div class="row">
-                        <div class="image col-md-4">
+                        <div class="image col-md-4 col-4">
                             <div class="inner">
                                 <img class="lozad" data-src="assets/img/kol1.jpg">
                             </div>
                         </div>
-                        <div class="image col-md-4">
+                        <div class="image col-md-4 col-4">
                             <div class="inner">
                                 <img class="lozad" data-src="assets/img/kol1.jpg">
                             </div>
                         </div>
-                        <div class="image col-md-4">
+                        <div class="image col-md-4 col-4">
                             <div class="inner">
                                 <img class="lozad" data-src="assets/img/kol1.jpg">
                             </div>
